samples/_failures_safe/1761191315_e3441e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e030706e.c: In function ‘main’:
./samples/SAFE/__tmp_e030706e.c:150:9: error: expected declaration or statement at end of input
  150 |         add_matrices(&mat1, &mat2, &result);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_e030706e.c:150:9: error: expected declaration or statement at end of input
